--- a/Card/index.html
+++ b/Card/index.html
@@ -32,7 +32,7 @@
         <script src="Script/FunctionSave.js"></script>
 
         <script src="Script/SceneTitle.js"></script>
-        <script src="Script/SceneSave.js"></script>
+        <script src="Script/SceneSaveSelect.js"></script>
         <script src="Script/SceneField.js"></script>
         <script src="Script/SceneGame.js"></script>
 
