--- a/Defense/index.html
+++ b/Defense/index.html
@@ -2,6 +2,15 @@
 <html>
     <head>
         <title>Desserterria Defense</title>
+        <style>
+            #Screen {
+                border : 2px solid black;
+                position : absolute;
+                left : 50%;
+                top : 50%;
+                transform : translate(-50%, -50%);
+            }
+        </style>
     </head>
     <body>
         <canvas id="Screen" width="1280" height="720"></canvas>
