--- a/CardRPG/index.html
+++ b/CardRPG/index.html
@@ -29,6 +29,7 @@
         <script src="Script/SceneTitle.js"></script>
         <script src="Script/SceneField.js"></script>
         <script src="Script/SceneGame.js"></script>
+        <script src="Script/SceneCollection.js"></script>
 
         <script src="Script/Main.js"></script>
     </body>
