--- a/CardDefense/index.html
+++ b/CardDefense/index.html
@@ -13,6 +13,7 @@
         </style>
     </head>
     <body>
+        <a href="/index.html">back</a>
         <canvas id="Screen" width="1280" height="720"></canvas>
         <script src="Script/Asset.js"></script>
         <script src="Script/UI.js"></script>
