--- a/CardGame/index.html
+++ b/CardGame/index.html
@@ -14,6 +14,7 @@
     </head>
     <body>
         <a href="/index.html">back</a>
+        <button onclick="document.documentElement.requestFullscreen()">full Screen</button>
         <canvas id="Screen" width="1280" height="720"></canvas>
         <script src="Script/Asset.js"></script>
         <script src="Script/UI.js"></script>
@@ -27,8 +28,8 @@
         <script src="Script/SceneTitle.js"></script>
         <script src="Script/SceneMap.js"></script>
         <script src="Script/SceneGame.js"></script>
-        <script src="Script/SceenCustom.js"></script>
+        <script src="Script/SceneCustom.js"></script>
 
-        <script src="Script/SceneMain.js"></script>
+        <script src="Script/Main.js"></script>
     </body>
 </html>
