--- a/CardDefense/index.html
+++ b/CardDefense/index.html
@@ -19,6 +19,7 @@
         <script src="Script/UI.js"></script>
         <script src="Script/DataCard.js"></script>
         <script src="Script/DataEnemy.js"></script>
+        <script src="Script/DataLevel.js"></script>
         <script src="Script/Const.js"></script>
         <script src="Script/Var.js"></script>
 
