--- a/CardDefense/index.html
+++ b/CardDefense/index.html
@@ -31,6 +31,7 @@
         <script src="Script/SceneTitle.js"></script>
         <script src="Script/SceneMap.js"></script>
         <script src="Script/SceneGame.js"></script>
+        <script src="Script/SceneCollection.js"></script>
 
         <script src="Script/Main.js"></script>
     </body>
