--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
             <a href="CardRoguelike/index.html">Roguelike</a>
             <a href="CardGame/index.html">Game</a>
             <a href="CardRPG/index.html">RPG</a>
+            <a href="2D-Platformer/index.html"></a>
         </div>
     </body>
 </html>
