--- a/CardRPG/index.html
+++ b/CardRPG/index.html
@@ -10,6 +10,11 @@
                 top : 50%;
                 transform : translate(-50%, -50%);
             }
+
+            @font-face {
+                font-family : 'neodgm';
+                src : url('Font/neodgm.ttf');
+            }
         </style>
     </head>
     <body>
