--- a/CardRoguelike/index.html
+++ b/CardRoguelike/index.html
@@ -35,6 +35,8 @@
         <script src="Script/SceneReady.js"></script>
         <script src="Script/SceneMap.js"></script>
         <script src="Script/SceneGame.js"></script>
+        <script src="Script/SceneEvent.js"></script>
+        <script src="Script/SceneShop.js"></script>
 
         <script src="Script/Main.js"></script>
     </body>
