--- a/2D-Platformer/index.html
+++ b/2D-Platformer/index.html
@@ -31,6 +31,7 @@
 
         <script src="Script/SceneTitle.js"></script>
         <script src="Script/SceneField.js"></script>
+        <script src="Script/SceneEditor"></script>
 
         <script src="Script/Main.js"></script>
     </body>
