--- a/CardRoguelike/index.html
+++ b/CardRoguelike/index.html
@@ -22,6 +22,7 @@
         <canvas id="Screen" width="1280" height="720"></canvas>
         <script src="Script/Asset.js"></script>
         <script src="Script/UI.js"></script>
+        <script src="Script/DataCharacter.js"></script>
         <script src="Script/DataCard.js"></script>
         <script src="Script/DataEnemy.js"></script>
         <script src="Script/Const.js"></script>
