--- a/2D-Platformer/index.html
+++ b/2D-Platformer/index.html
@@ -7,7 +7,7 @@
                 border : 2px solid black;
                 position : absolute;
                 left : 4px;
-                top : 4px;
+                top : 40px;
             }
 
             @font-face {
@@ -17,6 +17,7 @@
         </style>
     </head>
     <body>
+        <a href="/index.html">Back</a>
         <canvas id="Screen" width="1280" height="720"></canvas>
         <script src="Script/Asset.js"></script>
         <script src="Script/UI.js"></script>
